# Gabriel-Pastor-Proyecto

./: .breakpoints  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  server.py  tests.py
demo_mateo/: package-lock.json  package.json
demo_mateo/src/: App.js  ProtectedRoute.jsx  index.css  index.js  login.jsx  responsesHome.js  responsesMedicine.js
demo_mateo/src/components/: Home.jsx  Login.jsx  Medicine.jsx  Users.jsx  sign_in.jsx  todos.jsx
demo_mateo/src/contexts/: TokenContext.jsx
demo_mateo/src/errors/: error404.jsx
demo_mateo/src/routes/: HomeRoute.jsx  MedicineRoute.js  UsersRoute.js
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Home.jsx  Login.jsx  Medicine.jsx  Users.jsx
frontend/src/contexts/: AuthContext.jsx  TokenContext.jsx
frontend/src/errors/: error404.jsx
frontend/src/routes/: ProtectedRoutes.jsx  UnprotectedRoutes.jsx
