[tool.poetry]
name = "gabriel-pastor-proyecto"
version = "0.1.0"
description = "Inventory management system"
authors = ["Mateo Caso <casomateo8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.0.1"
fastapi = "^0.73.0"
pydantic = "^1.9.0"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
